--- a/HandHmod.csproj
+++ b/HandHmod.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Items\Developer\GamingEinstein\" />
     <Folder Include="Sounds\Music\" />
   </ItemGroup>
 </Project>
